Implement recover_on_errors()

--- a/README.Rmd
+++ b/README.Rmd
@@ -27,6 +27,8 @@ package where it occurs.
 relevant warnings/messages occur
 * `recover_on_warnings()` / `recover_on_messages()` let you enter the debugger in a chosen frame
  when a relevant warning/message occurs 
+* `recover_on_errors()` is a bit like `options(error = recover)` but with control
+  on class, package and message text.
 
 ## Installation
 
